<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Termo</string>
  <string name="widget_name_complex">Termo (Complex)</string>
  <string name="widget_name_simple">Termo (Simple)</string>
  <string name="widget_name_4x1">Termo (Wide 4X1)</string>
  <string name="strCaption">Current temp</string>
  <string name="strGraphDescription">Temp graph</string>
  <string name="strTextTemoCaption">Termo: </string>
  <string name="strTextIaoCaption">Iao: </string>
  <string name="strText">N/R</string>
  <string name="strWidgetText">n/a</string>
  <string name="strWidgetTor">n/t</string>
  <string name="strWidgetTime">time</string>
  <string name="strNotTime">time</string>
  <string name="menu_settings">Settings</string>
  <string name="strUrlGraph" translatable="false">http://termopogoda.ru/img/t12h.png?_t=1</string>
  <string name="strDoRequest">Do Request</string>
  <string name="strNoNetwork">No network</string>
  <string name="pref_themeWidgetTitle">Widget Theme</string>
  <string name="pref_themeWidgetTitleDialog">Widget Theme</string>
  <string name="pref_themeWidgetValuesDefault">0</string>

  <string name="pref_themeNotificationTitle">Notification Theme</string>
  <string name="pref_themeNotificationTitleDialog">Notification Theme</string>
  <string name="pref_themeNotificationValuesDefault">0</string>
  <string name="pref_isNotificationTitle">Show Notification</string>
  <string name="pref_isNotificationTitleDialog">Show Notification</string>
  <string name="pref_isNotificationValuesDefault" translatable="false">true</string>
  <string name="pref_digitsInNotificationTitle">Notification Icon</string>
  <string name="pref_digitsInNotificationTitleDialog">Notification Icon</string>
  <string name="pref_digitsInNotificationValuesDefault">1</string>
  <string name="pref_notificationGraphTitleDialog">Notification Graph</string>
  <string name="pref_notificationGraphValuesDefault">0</string>
  <string name="pref_notificationShowTermoTitleDialog">Show Termo graph</string>
  <string name="pref_notificationShowTermoValuesDefault" translatable="false">true</string>
  <string name="pref_notificationShowIaoTitleDialog">Show Iao graph</string>
  <string name="pref_notificationShowIaoValuesDefault" translatable="false">false</string>

  <string name="default_notification_channel_id" translatable = "false">TermoId</string>
  <string name="default_notification_channel_name">Termo</string>
</resources>