<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width= "match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

    <ImageView
        android:id="@+id/imgvNot"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:paddingStart="2dp"
        tools:ignore="RtlSymmetry"
        android:paddingTop="2dp"
        android:contentDescription="@string/strGraphDescription"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/lblNotTime"
        android:text="@string/strNotTime"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="top|end"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="SmallSp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:id="@+id/lblNotTermo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTextTemoCaption"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearance"
        android:paddingStart="20dp"
        android:layout_marginTop="-2dp"
        tools:ignore="RtlSymmetry"
        android:layout_alignTop="@+id/imgvNot"
        android:layout_toEndOf="@+id/imgvNot"/>

    <TextView
        android:id="@+id/lblNotTextTermo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblNotTermo"
        android:layout_toEndOf="@+id/imgvNot"
        android:paddingStart="15dp"
        android:layout_marginTop="-10dp"
        android:text="@string/strWidgetText"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/lblNotIao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strTextIaoCaption"
        android:textAppearance="?android:attr/textAppearance"
        android:textColor="@android:color/white"
        android:paddingStart="20dp"
        android:layout_marginTop="-2dp"
        tools:ignore="RtlSymmetry"
        android:layout_alignTop="@+id/imgvNot"
        android:layout_toEndOf="@+id/lblNotTextTermo"/>

    <TextView
        android:id="@+id/lblNotTextIao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblNotIao"
        android:layout_toEndOf="@+id/lblNotTextTermo"
        android:paddingStart="15dp"
        android:layout_marginTop="-10dp"
        android:text="@string/strWidgetTor"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        tools:ignore="RtlSymmetry" />

</RelativeLayout>