<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strCaption"
            android:layout_toLeftOf="@+id/drawView"
            android:layout_toStartOf="@+id/drawView" />

        <TextView
            android:id="@+id/lblTextTermo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblCaption"
            android:layout_centerHorizontal="true"
            android:text="@string/strText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/lblTermo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblCaption"
            android:layout_centerHorizontal="true"
            android:text="@string/strTextTemoCaption"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_toLeftOf="@id/lblTextTermo" />

        <TextView
            android:id="@+id/lblTextIao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblTextTermo"
            android:layout_centerHorizontal="true"
            android:text="@string/strText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/lblIao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lblTextTermo"
            android:layout_centerHorizontal="true"
            android:text="@string/strTextIaoCaption"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_toLeftOf="@id/lblTextIao" />

        <com.pasha.termo.DrawView
            android:id="@+id/drawView"
            android:name="com.pasha.termo.DrawView"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/imgGraph"
            android:layout_toRightOf="@+id/lblTextTermo"
            android:layout_toEndOf="@+id/lblTextTermo"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/imgGraph"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/lblIao"
            android:contentDescription="@string/strGraphDescription"
            android:scaleType="fitStart" />

    </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>