<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay4x1"
    android:layout_width="288dp"
    android:layout_height="72dp"
    android:background="@drawable/back2"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/widget_margin_top"
    android:layout_marginLeft="@dimen/widget_margin"
    android:layout_marginRight="@dimen/widget_margin"
    android:layout_marginBottom="@dimen/widget_margin">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imgvWidget"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@string/strGraphDescription"
        android:layout_gravity="start|top" />

    <TextView
        android:id="@+id/lblWidgetText"
        android:text="@string/strWidgetText"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="56sp"
        android:layout_toEndOf="@+id/imgvWidget"
        android:layout_marginTop="-4sp" />

    <TextView
        android:id="@+id/lblWidgetTor"
        android:text="@string/strWidgetTor"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="56sp"
        android:layout_toEndOf="@+id/lblWidgetText"
        android:layout_marginStart="16sp"
        android:layout_marginTop="-4sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnWidRefresh"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_gravity="end|top"
        android:background="@drawable/perm_group_sync_settings"/>

    <TextView
        android:id="@+id/lblWidgetTime"
        android:text="@string/strWidgetTime"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="end|bottom"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginEnd="4dp"
        android:textSize="12sp"/>
</FrameLayout>