<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lay1x1"
    android:layout_width="72dp"
    android:layout_height="80dp"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/back"
    android:layout_margin="@dimen/widget_margin">

    <TextView
        android:id="@+id/lblWidgetText"
        android:text="@string/strWidgetText"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="top|center"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp"
        android:layout_marginTop="-3dp"/>

    <TextView
        android:id="@+id/lblWidgetTor"
        android:text="@string/strWidgetTor"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="24sp"
        />

 	<Button
        android:id="@+id/btnWidRefresh"
 	    style="?android:attr/buttonStyleSmall"
        android:layout_width="24dp"
        android:layout_height="24dp"
	    android:layout_gravity="end|bottom"
        android:background="@drawable/perm_group_sync_settings"/>

    <TextView
        android:id="@+id/lblWidgetTime"
        android:text="@string/strWidgetTime"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="start|bottom"
        android:textColor="@android:color/darker_gray"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="2dp"
        android:textSize="10sp"/>

</FrameLayout>